{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Player",
            "id": "5a60cc74-e30f-4a4a-87b4-b215e98e5486",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "3587d3a4-a429-4c74-aa1f-b227203708fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "83c086d2-3109-479d-bfb4-40d2a1f76e8e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenSkillMenu",
                    "type": "Button",
                    "id": "7e453076-e923-4981-89fe-f69f97213016",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "Button",
                    "id": "6c872222-f7f6-4042-ae5a-251c6115cb2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShapeUpdate",
                    "type": "Button",
                    "id": "e7ff0d26-2cf8-4df6-97b1-649547deec42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "d664f4f4-bc42-4d91-8058-ccb272839122",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b8c182d4-cd48-4f0b-9bda-5368329afa09",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9e9574ba-dcaa-48df-814d-b160acc5c2dc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "59f30de4-a211-4b22-b732-cb009905c4ab",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6f057035-9f4a-4f5b-9167-4dbb88ea8098",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5b0f750e-dd2c-4b56-a249-aaf21e40fd93",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "64cfe38f-63f5-4ae5-96e2-9638d68163e9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cef9960-a7ed-4eb2-9125-241aa25fc307",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenSkillMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c69f6ad5-f20a-44e6-a438-12ab12a77386",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a12fbf6-1bc0-43cb-8804-e15eca06d9b2",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShapeUpdate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "428e5926-61a3-4fb5-89bb-38c54fd61820",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogue",
            "id": "dbd96388-fc79-40e6-b749-82afa56dc1d1",
            "actions": [
                {
                    "name": "AdvanceDialogue",
                    "type": "Button",
                    "id": "b508ba4c-f4e2-4ddd-9442-a2b791a824c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Zoom",
                    "type": "Button",
                    "id": "178c7483-1816-45ce-800b-657ccf7df418",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenSkillMenu",
                    "type": "Button",
                    "id": "f9e90421-1c34-4486-b833-81c94332db52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShapeUpdate",
                    "type": "Button",
                    "id": "1b050cb6-ea1a-4d79-afb0-0a8f3e0c3fa0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2c86235f-39ad-4199-9bcb-3f414a50d729",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AdvanceDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f217f222-bf41-4ec0-8793-f53148d5c664",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AdvanceDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76e96b93-9f55-490b-81a5-1f167c042ded",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76dc9c19-68ca-417b-adfd-7708a87750e0",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenSkillMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38a8c148-8303-4f64-8e9d-ae1492678073",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShapeUpdate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SkillMenu",
            "id": "2d8a5a1d-c047-4a5a-b32b-461aed72a298",
            "actions": [
                {
                    "name": "CloseSkillMenu",
                    "type": "Button",
                    "id": "27071d54-0b88-43b2-adfb-22f0a4ccdf8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MainAxis",
                    "type": "Value",
                    "id": "2d45a3f2-73ec-4846-8836-1e79e00bf05b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HackerAxis",
                    "type": "Value",
                    "id": "a25822cd-6292-4e5e-8cc9-700404cf866c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Revert",
                    "type": "Button",
                    "id": "cdd89a40-e869-4315-a93a-4147e5fda07c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AdvanceDialogue",
                    "type": "Button",
                    "id": "0db4d253-6917-470f-8e5e-6c862f8728d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "08e2deff-d0c8-49dd-9ceb-9dba603bca2b",
                    "path": "<Keyboard>/p",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "CloseSkillMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "677a14ed-7cb2-48a3-b353-9416b52577b0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d41995cc-7ed8-4bc7-9dcc-bc4d90d1ead1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "97d169c9-7d54-4f65-a3ab-31d7631f2396",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c4e0b45a-e304-46ab-929c-9200f0dbd0e3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7cd68548-8f7b-4dcb-857d-a180f4b72aef",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "778b91a3-d17f-4174-a284-4a0868b7a2c4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HackerAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4213dfe1-1e1f-4c1c-890c-3479a64ce9c1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HackerAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "110a7cc4-eab6-4b7d-95ff-ddbe3bff7db4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HackerAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2f3aee13-4434-47ca-8182-83e8ef0f24d1",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HackerAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f6a0a5ea-7e43-427f-b06f-e29b91b468da",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HackerAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d9b810a8-1734-4935-94e0-6e40a54a4885",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Revert",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa7a1136-7c96-4269-b077-92f3ae250ee6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AdvanceDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ce79136-2b85-43c2-a5d5-5083357331bc",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AdvanceDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ZoomedOut",
            "id": "caff4e0d-9de7-4d82-80dd-134315ac3d2d",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "Button",
                    "id": "5b078b6d-54c5-4460-b901-1bf32cdb6607",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AdvanceDialogue",
                    "type": "Button",
                    "id": "138ae1ac-1c84-44b5-bb7c-5571dad98f7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c57d1d9-d0ab-4935-8bfd-d42fa1cfb773",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "244c02c6-029e-4421-bcda-17d2f1ec5043",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AdvanceDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "356904df-f552-4cad-97b6-5b2e64a36050",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AdvanceDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseGame",
            "id": "746f8418-1e4e-401b-9d24-8037034fddba",
            "actions": [
                {
                    "name": "UnpauseGame",
                    "type": "Button",
                    "id": "6e967b9b-4c01-4486-b9ac-cd6dc3dad0d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1bd788a7-141f-4944-900c-88f6a3c746d5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnpauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}